--- a/Moringa_Data_Science_Core_ModuleII_W6_Independent_Project_2022_06_Margaret_Gathoni.ipynb
+++ b/Moringa_Data_Science_Core_ModuleII_W6_Independent_Project_2022_06_Margaret_Gathoni.ipynb
@@ -6091,6 +6091,36 @@
       "metadata": {
         "id": "UXDVoURnK-fX"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Conclusions**\n",
+        "\n",
+        "Most matches were friendly or other types other than World Cup matches.\n",
+        "\n",
+        "The highest value of home scores was by team Australia.\n",
+        "\n",
+        "The highest values of away scores were by team Germany\n",
+        "\n",
+        "The polynomial regression model produced the lowest RMSE on prediction for the test set making it a good model\n",
+        "\n",
+        "The logistic model used was able to predict the test set with 100% accuracy for both home and away score"
+      ],
+      "metadata": {
+        "id": "wGpgHzlWH6HR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "t7pNfI_yJe6G"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -6098,7 +6128,7 @@
       "collapsed_sections": [],
       "name": "Moringa_Data_Science_Core_ModuleII_W6_Independent_Project_2022_06_Margaret_Gathoni.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPqCc2jf9zwsyB4dKq1CWyS",
+      "authorship_tag": "ABX9TyMG7vSb9dIYJFo9eS7ws6C2",
       "include_colab_link": true
     },
     "kernelspec": {
